--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.1",
     "json-server": "^0.17.4",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -30,7 +31,7 @@
     "start-client": "set PORT=3001&& react-scripts start",
     "start-server": "npx json-server --watch ./db/db.json --port 3000",
     "build": "react-scripts build",
-    "dev":  "concurrently \"npm run start-client\" \"npm run start-server\""
+    "dev": "concurrently \"npm run start-client\" \"npm run start-server\""
   },
   "eslintConfig": {
     "extends": [
